components/Registration/Registration.module.scss
.container {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    gap: 3rem;
    height: 100vh;
    position: relative;
    // overflow: scroll;

    @media (max-width: 768px) {
        background-size: 400px;
        gap: 2rem;
        padding-bottom: 25rem; // bottom padding is for mobile keyboard
        // overflow: auto;
    }
}

.loading {
    position: fixed;
    inset: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1000;
}

.background {
    height: fit-content;
    width: 1519px;
    position: fixed;

    // position: absolute;

    @media (min-width: 1519px) {
        width: 100vw;
    }

    @media (max-width: 768px) {
        width: 100vw;
        // position: absolute;
    }

    // @media (max-width: 540px) {
    //     width: 110vw;
    // }

    // @media (max-width: 500px) {
    //     width: 130vw;
    // }

    // @media (max-width: 468px) {
    //     width: 150vw;
    // }
}

.contentWrapper {
    // margin-top: 126px;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    gap: 3rem;
    // width: 80vw;
    // margin: 13rem 4rem;
    // background-color: green;
    @media (max-width: 768px) {
        // margin-top: 100px;
        top: 100px;
        position: absolute;
        overflow: scroll;
        bottom: 0;
        // height: 80%;
        // padding: 40rem 0 80rem;
        // overflow: auto;
        // position: absolute;
    }
}

.form {
    width: 100%;
    h1 {
        font-weight: 900;
        font-size: 36px;
        color: white;
        // font-size: 56px;
        @media (max-width: 768px) {
            font-size: 36px;
        }
        color: white;
    }

    h4 {
        font-weight: 400;
        font-size: 20px;
        color: red;
        @media (max-width: 768px) {
            font-size: 16px;
        }
    }

    label,
    h3 {
        font-weight: 600;
        font-size: 20px;
        color: white;
        @media (max-width: 768px) {
            font-size: 18px;
        }
        color: white;
    }

    display: flex;
    flex-direction: column;
    gap: 3rem;
}

.navigation {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
}

.formWrapper {
    display: flex;
    width: 100%;
    gap: 3rem;
    max-width: 1200px;
}

.formContent {
    flex: 2;
}

.character {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    flex: 0.5;
    img {
        width: 100%;
        height: auto;
        object-fit: contain;
        // scale up 1.5x
    }
    @media (max-width: 1000px) {
        flex: 1;
    }

    @media (max-width: 768px) {
        display: none;
    }
}

